--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
+  "engines": {
+    "node": "13.12.0"
+  },
   "dependencies": {
     "@types/pg": "^7.14.10",
     "bcryptjs": "^2.4.3",
